--- a/Source/Website/DentalClinic/MainUI/assets/css/base.css
+++ b/Source/Website/DentalClinic/MainUI/assets/css/base.css
@@ -96,7 +96,7 @@ p.form-cotrol {
     letter-spacing: 1px;
     text-transform: uppercase;
     border-top: 1px solid #d9d9d9;
-    background-color: #E5E5E2;
+    background-color: #f4f4f2;
     text-align: left;
 }
 
