--- a/Source/Website/DentalClinic/assets/css/paging.css
+++ b/Source/Website/DentalClinic/assets/css/paging.css
@@ -22,7 +22,7 @@
 }
 
 .pagination .active {
-    background-color: #4CAF50;
+    background-color: #583FBC;
     color: white;
 }
   .pagination a:hover:not(.active) {
