--- a/Source/Website/DentalClinic/MainUI/assets/css/main.css
+++ b/Source/Website/DentalClinic/MainUI/assets/css/main.css
@@ -502,7 +502,7 @@
     color: rgba(24, 25, 69, .8)
 }
 
-select, .form-control {
+select, datalist, .form-control {
     font-size: 1.4rem;
     /* line-height: 24px; */
     display: block;
